Fix list textwrapping and nested list bullets

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -55,7 +55,10 @@ footer { margin-bottom: 20px; }
  * Lists
  */
 :not(.menu) > ul { list-style: none;  padding-left: 0; list-style-type: none; }
-:not(.menu) > ul > li:before { content: "*"; color: var(--list-point-color); margin-right: 9px; }
+:not(.menu) > ul > li { position: relative; left: 1em; }
+:not(.menu) > ul > li:before { content: "*"; color: var(--list-point-color); margin-right: 1em; left: -1em; position: absolute; }
+:not(.menu) > ul > li > ul > li:before { content: "+" }
+:not(.menu) > ul > li > ul > li > ul > li:before { content: "-" }
 :not(.menu) > ol { list-style: none;  padding-left: 0; counter-reset: li }
 :not(.menu) > ol ol { padding-left: 2em }
 :not(.menu) > ol > li:before { content: counter(li) "."; color: var(--list-point-color); margin-right: 9px; counter-increment: li }
